--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,11 @@
       .hidden {
         display: none;
       }
+      ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+      }
     </style>
   </head>
   <body>
@@ -16,10 +21,30 @@
     <div id="error" class="hidden">Something went wrong!</div>
     <ul id="todos">
       {% for d in data %}
-      <li>{{ d.description}}</li>
+      <li>
+        <input class="check-completed" type="checkbox" {% if d.completed %} checked {% endif %} />
+        {{d.description}}
+      </li>
       {% endfor %}
     </ul>
     <script>
+      const checkboxes = document.querySelectorAll(".check-completed");
+      for (let i = 0; i < checkboxes.length; i++) {
+        const checkbox = checkboxes[i];
+        checkbox.onchange = function(e) {
+          console.log("event", e);
+          const newCompleted = e.target.checked;
+          fetch("/todos/set-completed", {
+            method: "POST",
+            body: JSON.stringify({
+              "completed": newCompleted
+            }),
+            headers: {
+              "Content-Type": "application/json",
+            }
+          })
+        }
+      }
       document.getElementById("form").onsubmit = function (e) {
         e.preventDefault();
         fetch("/todos/create", {
