--- a/templates/index.html
+++ b/templates/index.html
@@ -10,66 +10,88 @@
         list-style: none;
         padding: 0;
         margin: 0;
+        width: 200px;
       }
     </style>
   </head>
   <body>
-    <form id="form">
+    <form id="form" method="post" action="/todos/create">
       <input type="text" id="description" name="description" />
-      <input type="submit" name="Create" />
+      <input type="submit" value="Create" />
     </form>
     <div id="error" class="hidden">Something went wrong!</div>
     <ul id="todos">
-      {% for d in data %}
+      {% for todo in todos %}
       <li>
-        <input class="check-completed" type="checkbox" {% if d.completed %} checked {% endif %} />
-        {{d.description}}
+        <input class="check-completed" data-id="{{ todo.id }}" type="checkbox" {% if todo.completed %} checked {% endif %} />
+        {{ todo.description }}
       </li>
       {% endfor %}
     </ul>
     <script>
-      const checkboxes = document.querySelectorAll(".check-completed");
+      const checkboxes = document.querySelectorAll('.check-completed');
       for (let i = 0; i < checkboxes.length; i++) {
         const checkbox = checkboxes[i];
         checkbox.onchange = function(e) {
-          console.log("event", e);
           const newCompleted = e.target.checked;
-          fetch("/todos/set-completed", {
-            method: "POST",
+          const todoId = e.target.dataset['id'];
+          fetch('/todos/' + todoId + '/set-completed', {
+            method: 'POST',
             body: JSON.stringify({
-              "completed": newCompleted
+              'completed': newCompleted
             }),
             headers: {
-              "Content-Type": "application/json",
+              'Content-Type': 'application/json'
             }
+          })
+          .then(function() {
+            document.getElementById('error').className = 'hidden';
+          })
+          .catch(function() {
+            document.getElementById('error').className = '';
           })
         }
       }
-      document.getElementById("form").onsubmit = function (e) {
+      const descInput = document.getElementById('description');
+      document.getElementById('form').onsubmit = function(e) {
         e.preventDefault();
-        fetch("/todos/create", {
-          method: "POST",
+        const desc = descInput.value;
+        descInput.value = '';
+        fetch('/todos/create', {
+          method: 'POST',
           body: JSON.stringify({
-            description: document.getElementById("description").value,
+            'description': desc,
           }),
           headers: {
-            "Content-Type": "application/json",
-          },
+            'Content-Type': 'application/json',
+          }
         })
-          .then(function (response) {
-            return response.json();
-          })
-          .then(function (jsonResponse) {
-            console.log(jsonResponse);
-            const liItem = document.createElement("LI");
-            liItem.innerHTML = jsonResponse["description"];
-            document.getElementById("todos").appendChild(liItem);
-            document.getElementById("error").className = "hidden";
-          })
-          .catch(function () {
-            document.getElementById("error").className = "";
-          });
-      };
+        .then(response => response.json())
+        .then(jsonResponse => {
+          const li = document.createElement('li');
+          const checkbox = document.createElement('input');
+          checkbox.className = 'check-completed';
+          checkbox.type = 'checkbox';
+          checkbox.setAttribute('data-id', jsonResponse.id);
+          li.appendChild(checkbox);
+
+          const text = document.createTextNode(' ' + jsonResponse.description);
+          li.appendChild(text);
+
+          const deleteBtn = document.createElement('button');
+          deleteBtn.className = 'delete-button';
+          deleteBtn.setAttribute('data-id', jsonResponse.id);
+          deleteBtn.innerHTML = '&cross;';
+          li.appendChild(deleteBtn);
+
+          document.getElementById('todos').appendChild(li);
+          document.getElementById('error').className = 'hidden';
+        })
+        .catch(function() {
+          console.error('Error occurred');
+          document.getElementById('error').className = '';
+        })
+      }
     </script>
   </body>
 </html>
